OPEN - task 1: "方向付け"フェーズを実行する。 https://github.com/nilcy/yoyo/issues/issues/issue/1
Signed-off-by: nilcy <nilcy@mac.com>