@@ -1,23 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="utf-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.nilcy.yoyo</groupId>
+  <groupId>com.github.nilcy</groupId>
   <artifactId>yoyo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>7.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>YOYO</name>
-  <description>UUO (you-you-oh) [short for "Un-Used Operation"]</description>
-  <url>https://github.com/nilcy/yoyo</url>
+  <name>yoyo</name>
+  <description>Enterprise Business Application Bootstrap.</description>
+  <url>http://nilcy.github.io/yoyo/maven/site/</url>
   <inceptionYear>2013</inceptionYear>
   <organization>
     <name>nilcy</name>
-    <url>https://github.com/nilcy/</url>
+    <url>https://github.com/nilcy</url>
   </organization>
   <licenses>
     <license>
-      <name>GNU AFFERO GENERAL PUBLIC LICENSE</name>
-      <url>http://www.gnu.org/licenses/agpl-3.0.txt</url>
+      <name>Affero GPL3</name>
+      <url>http://www.gnu.org/licenses/agpl.html</url>
       <distribution>repo</distribution>
       <comments>The GNU Affero General Public License is a free, copyleft license for software and other kinds of works, specifically designed to ensure cooperation with the community in the case of network server software.</comments>
     </license>
@@ -27,23 +27,26 @@
       <id>nilcy</id>
       <name>Takehiro Shimokawa</name>
       <email>nilcy@mac.com</email>
-      <url>https://github.com/nilcy</url>
       <roles>
+        <role>SPONSOR</role>
         <role>DIRECTOR</role>
         <role>CREATOR</role>
         <role>EDITOR</role>
         <role>AUDITOR</role>
+        <role>READER</role>
       </roles>
       <timezone>-9</timezone>
     </developer>
   </developers>
   <modules>
     <module>yoyo-framework</module>
+    <module>yoyo-actor</module>
+    <module>yoyo-sales</module>
+    <module>yoyo-application</module>
   </modules>
   <scm>
+    <connection>scm:git:https://github.com/nilcy/yoyo.git</connection>
     <url>https://github.com/nilcy/yoyo</url>
-    <connection>scm:git:git://github.com/nilcy/yoyo.git</connection>
-    <developerConnection>scm:git:git@github.com:nilcy/yoyo.git</developerConnection>
   </scm>
   <issueManagement>
     <system>GitHub Issues</system>
@@ -53,15 +56,15 @@
   <distributionManagement>
     <repository>
       <id>release-repository</id>
-      <url>file:///home.nilcy/git/zeroth-pages/maven/release</url>
+      <url>file:///home.nilcy/git/yoyo-pages/maven/release</url>
     </repository>
     <snapshotRepository>
       <id>snapshot-repository</id>
-      <url>file:///home.nilcy/git/zeroth-pages/maven/snapshot/</url>
+      <url>file:///home.nilcy/git/yoyo-pages/maven/snapshot/</url>
     </snapshotRepository>
     <site>
       <id>site-repository</id>
-      <url>file:///home.nilcy/git/zeroth-pages/maven/site</url>
+      <url>file:///home.nilcy/git/yoyo-pages/maven/site</url>
     </site>
   </distributionManagement>
   <properties>
@@ -69,5 +72,375 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <javaee-api.version>7.0</javaee-api.version>
+    <javaee-web-api.version>7.0</javaee-web-api.version>
+    <junit.version>4.11</junit.version>
+    <jeeunit-cdi.version>1.0.0</jeeunit-cdi.version>
+    <jeeunit-glassfish.version>1.0.0</jeeunit-glassfish.version>
+    <glassfish-embedded-all.version>4.0</glassfish-embedded-all.version>
+    <postgresql.version>9.2-1002-jdbc4</postgresql.version>
   </properties>
+  <repositories>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Central Repository</name>
+      <url>http://repo.maven.apache.org/maven2</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <releases>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Central Repository</name>
+      <url>http://repo.maven.apache.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jboss.arquillian</groupId>
+        <artifactId>arquillian-bom</artifactId>
+        <version>1.0.4.Final</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+  <build>
+    <defaultGoal>package</defaultGoal>
+    <directory>target</directory>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.7</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.4</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.4.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>aspectj-maven-plugin</artifactId>
+                    <versionRange>[1.2,)</versionRange>
+                    <goals>
+                      <goal>compile</goal>
+                      <goal>test-compile</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore />
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.5</version>
+        <executions>
+          <execution>
+            <id>default-clean</id>
+            <phase>clean</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9</version>
+        <executions>
+          <execution>
+            <phase>deploy</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <locale>en</locale>
+          <author>true</author>
+          <show>private</show>
+          <linksource>true</linksource>
+          <detectLinks>false</detectLinks>
+          <aggregate>false</aggregate>
+          <links>
+            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+            <link>http://java.sun.com/javaee/6/docs/api/</link>
+            <link>http://junit-team.github.io/junit/javadoc/latest/</link>
+            <link>http://hamcrest.org/JavaHamcrest/javadoc/1.3/</link>
+          </links>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <compilerArgument>-Xlint</compilerArgument>
+        </configuration>
+        <executions>
+          <execution>
+            <id>default-testCompile</id>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>default-compile</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <id>default-resources</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>resources</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>default-testResources</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>testResources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.14.1</version>
+        <configuration>
+          <forkCount>1</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx512m -XX:MaxPermSize=128m -XX:-UseSplitVerifier</argLine>
+          <testFailureIgnore>false</testFailureIgnore>
+          <!-- <skip>false</skip> -->
+          <systemProperties>
+            <property>
+              <name>net.sourceforge.cobertura.datafile</name>
+              <value>target/cobertura/cobertura.ser</value>
+            </property>
+          </systemProperties>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <id>default-install</id>
+            <phase>install</phase>
+            <goals>
+              <goal>install</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.7</version>
+        <executions>
+          <execution>
+            <id>default-deploy</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>deploy</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.2</version>
+        <executions>
+          <execution>
+            <id>default-site</id>
+            <phase>site</phase>
+            <goals>
+              <goal>site</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>default-deploy</id>
+            <phase>site-deploy</phase>
+            <goals>
+              <goal>deploy</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <locales>en</locales>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.doxia</groupId>
+              <artifactId>doxia-module-markdown</artifactId>
+              <version>1.3</version>
+            </dependency>
+          </dependencies>
+          <reportPlugins>
+            <plugin>
+              <artifactId>maven-project-info-reports-plugin</artifactId>
+              <version>2.6</version>
+              <configuration>
+                <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+              </configuration>
+              <reportSets>
+                <reportSet>
+                  <reports>
+                    <report>index</report>
+                    <report>summary</report>
+                    <report>license</report>
+                    <report>project-team</report>
+                    <report>mailing-list</report>
+                    <report>dependencies</report>
+                    <report>dependency-convergence</report>
+                    <report>dependency-management</report>
+                    <report>issue-tracking</report>
+                    <report>scm</report>
+                    <report>cim</report>
+                    <report>plugin-management</report>
+                    <report>plugins</report>
+                  </reports>
+                </reportSet>
+              </reportSets>
+            </plugin>
+            <plugin>
+              <artifactId>maven-jxr-plugin</artifactId>
+              <version>2.3</version>
+              <configuration>
+                <aggregate>false</aggregate>
+                <inputEncoding>${maven.compiler.encoding}</inputEncoding>
+                <outputEncoding>UTF-8</outputEncoding>
+              </configuration>
+            </plugin>
+            <plugin>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <version>2.9</version>
+            </plugin>
+            <plugin>
+              <artifactId>maven-surefire-report-plugin</artifactId>
+              <version>2.13</version>
+              <reportSets>
+                <reportSet>
+                  <reports>
+                    <report>report-only</report>
+                  </reports>
+                </reportSet>
+              </reportSets>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>cobertura-maven-plugin</artifactId>
+              <version>2.5.2</version>
+              <configuration>
+                <formats>
+                  <format>html</format>
+                </formats>
+              </configuration>
+            </plugin>
+            <plugin>
+              <artifactId>maven-checkstyle-plugin</artifactId>
+              <version>2.9.1</version>
+              <configuration>
+                <configLocation>yoyo-framework/yoyo-framework-coding/src/main/config/Checkstyle.xml</configLocation>
+              </configuration>
+            </plugin>
+          </reportPlugins>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>dbunit-maven-plugin</artifactId>
+        <version>1.0-beta-3</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.10.1.1</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.2-FINAL</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <dataTypeFactoryName>org.dbunit.ext.postgresql.PostgresqlDataTypeFactory</dataTypeFactoryName>
+          <driver>org.postgresql.Driver</driver>
+          <url>jdbc:postgresql://localhost/yoyo</url>
+          <username>yoyo</username>
+          <password>happyhacking</password>
+          <type>CLEAN_INSERT</type>
+          <format>xls</format>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <reporting>
+    <outputDirectory>target/site</outputDirectory>
+  </reporting>
 </project>
